# content-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
diagrams/: README.md  high-level-flow.mmd  stack-architecture.mmd  stack-deploy-topology.mmd
docs/: 01-context-goals.md  02-system-overview.md  03-platform-constraints.md  04-infra-hybrid.md  05-pipeline-gates-scores.md  06-build-phases.md  07-open-decisions.md  08-post-publish-monitor.md  09-localization.md  references.md
docs/gates/: lane-a-policy-safety.md  lane-b-tone-brand.md  lane-c-fact-check.md  lane-d-context-timing.md
docs/superpowers/plans/: 2026-06-16-phase0-consistency-engine.md
docs/superpowers/specs/: 2026-06-16-stack-tools-design.md
migrations/: env.py
migrations/versions/: 34112c6b7c5f_phase0_tables.py
schemas/: README.md  lane-a-verdict.schema.json  lane-b-advisory.schema.json  lane-c-factcheck.schema.json  lane-d-context.schema.json  monitor-snapshot.schema.json
src/contentauto/: config.py  crypto.py  db.py
src/contentauto/api/: app.py
src/contentauto/gate/: hard_rules.py
src/contentauto/llm/: base.py  claude.py
tests/: conftest.py  test_api.py  test_config.py  test_content_state.py  test_crypto.py  test_db_roundtrip.py  test_hard_rules_gate.py  test_llm_claude.py  test_local_adapter.py  test_oauth_routes.py  test_pipeline_stages.py  test_run_worker_import.py  test_token_store.py  test_verdicts_match_schema.py  test_worker.py  test_worker_adapter.py  test_youtube_adapter.py  test_youtube_auth.py
(+5 files in other folders)
