[project]
name = "contentauto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wadjakorn.t", email = "wazjakorn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.2",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.1",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "pgvector>=0.4.2",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "redis>=5.3.1",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "fakeredis>=2.36.1",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
